@@ -90,6 +90,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13922: argparse no longer incorrectly strips '--'s that appear
+  after the first one.
+
 - Issue #12353: argparse now correctly handles null argument values.
 
 - Issue #6493: An issue in ctypes on Windows that caused structure bitfields
